@@ -1143,6 +1143,8 @@ void TSubPage::doClick(int x, int y, bool pressed)
     while (button)
     {
         TButton *but = button->button;
+        bool clickable = but->isClickable();
+        MSG_DEBUG("Testing button " << but->getButtonIndex() << " (" << but->getButtonName() << "): " << (clickable ? "CLICKABLE" : "NOT CLICKABLE"));
 
         if (x > but->getLeftPosition() && x < (but->getLeftPosition() + but->getWidth()) &&
             y > but->getTopPosition() && y < (but->getTopPosition() + but->getHeight()))
@@ -1153,6 +1155,10 @@ void TSubPage::doClick(int x, int y, bool pressed)
 
             if (but->doClick(btX, btY, pressed))
                 break;
+        }
+        else if (clickable)
+        {
+            MSG_DEBUG("Button out of position: L " << but->getLeftPosition() << ", R " << (but->getLeftPosition() + but->getWidth()) << ", T " << but->getTopPosition() << ", B " << (but->getTopPosition() + but->getHeight()) << " --> " << x << ":" << y);
         }
 
         button = button->previous;
